--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@sanity/client": "^6.4.11",
     "@sanity/image-url": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -40,7 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
