--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@sanity/client": "^6.4.11",
     "@sanity/image-url": "^1.0.2",
