--- a/frontend_react/.eslintrc
+++ b/frontend_react/.eslintrc
@@ -7,7 +7,7 @@
     "eslint:recommended",
     "plugin:jsx-a11y/recommended"
   ],
-  "parseroptions": {
+  "parserOptions": {
     "ecmafeatures": {
       "jsx": true
     },
